kubernetes/test-ecr.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-ecr
spec:
  containers:
  - name: pokemon
    image: 852259342717.dkr.ecr.ap-northeast-2.amazonaws.com/pokemon-db:aef1558f
    command:
      - tail
      - -f
      - /dev/null
