kubernetes/test-priv.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-ecr
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["tail", "-f", "/dev/null"]
    securityContext:
      privileged: true
