kubernetes/test-pvc.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pvc
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["tail", "-f", "/dev/null"]
    volumeMounts:
      - name: pvc
        mountPath: /pvc
  volumes:
    - name: pvc
      persistentVolumeClaim:
        claimName: test-pvc
