kubernetes/test-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: test-lb
spec:
  selector:
    app: test-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: test-lb-nginx
  labels:
    app: test-lb
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
