kubernetes/test-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ingress
  template:
    metadata:
      labels:
        app: test-ingress
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
spec:
  selector:
    app: test-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: gemini.upnl.org
      http:
        paths:
          - backend:
              serviceName: test-ingress
              servicePort: 80
